@@ -1,3 +1,6 @@
+[B]2.1.3[/B]
+• Minor fixes
+
 [B]2.1.2[/B]
 • Fix adding item with Skin Shortcut
 
